--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	},
 	"scripts": {
 		"start": "node esbuild.config.mjs",
-		"build": "rm -rf dist && tsc -noEmit -skipLibCheck && NODE_ENV=production node esbuild.config.mjs",
+		"build": "rimraf dist && tsc -noEmit -skipLibCheck && cross-env NODE_ENV=production node esbuild.config.mjs",
 		"format": "prettier --write --no-error-on-unmatched-pattern **/*.{ts,js,json,md}, *.{ts,js,json,md}",
 		"prepare": "husky install",
 		"release": "ts-node --project=./tsconfig.scripts.json ./scripts/create-release.ts"
@@ -17,11 +17,12 @@
 	"devDependencies": {
 		"@types/inquirer": "8.2.0",
 		"@types/node": "17.0.8",
-		"@typescript-eslint/eslint-plugin": "5.2.0",
-		"@typescript-eslint/parser": "5.2.0",
+		"@typescript-eslint/eslint-plugin": "^8.34.1",
+		"@typescript-eslint/parser": "^8.34.1",
 		"builtin-modules": "3.2.0",
 		"compare-versions": "4.1.3",
 		"esbuild": "0.13.12",
+		"eslint": "8.0.0",
 		"fs-extra": "10.0.0",
 		"husky": ">=6",
 		"inquirer": "8.2.0",
@@ -30,6 +31,7 @@
 		"open": "8.4.0",
 		"prettier": "2.5.1",
 		"prettier-plugin-organize-imports": "2.3.4",
+		"rimraf": "^6.0.1",
 		"ts-node": "10.4.0",
 		"tslib": "2.3.1",
 		"typescript": "4.4.4",
